<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/previous"
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:layout_marginTop="24dp"
        android:background="@color/white"
        android:contentDescription="@string/previous"
        app:layout_constraintEnd_toStartOf="@+id/next"
        app:layout_constraintHorizontal_bias="0.089"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back_arrow" />

    <ImageButton
        android:id="@+id/next"
        android:layout_width="31dp"
        android:layout_height="38dp"
        android:layout_marginTop="28dp"
        android:background="@color/white"
        android:contentDescription="@string/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.919"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_forward_arrow" />

    <ListView
        android:id="@+id/listOfSongs"
        android:layout_width="361dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MediumMode" />

    <TextView
        android:id="@+id/Mode"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="21dp"
        android:text="@string/mode"
        android:textColor="@color/cardview_dark_background"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/EasyMode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/previous"
        app:layout_constraintVertical_bias="0.506" />

    <Button
        android:id="@+id/EasyMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="188dp"
        android:layout_marginEnd="31dp"
        android:layout_marginRight="31dp"
        android:text="@string/easy_mode"
        app:layout_constraintEnd_toStartOf="@+id/MediumMode"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/MediumMode"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_marginTop="188dp"
        android:text="@string/mdeium_mode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ExpertMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="188dp"
        android:text="@string/expert_mode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.259"
        app:layout_constraintStart_toEndOf="@+id/MediumMode"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>